# sample-bevy-utility-app

./: .gitignore  Cargo.toml
src/: logs.rs  main.rs  main_bevy.rs  main_bevy_bootstrap.rs  main_tray.rs  window_proc.rs
